--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Exo;
+}
+
+/* 
+:root {
   --background: #ffffff;
   --foreground: #171717;
 }
